--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.14.8",
+    "prettier": "^3.3.2",
     "tsx": "^4.15.7"
   },
   "scripts": {
