--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "tsx index.ts"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   }
