--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "gh-previews",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/itsvyle/gh-previews",
-  "author": "Greg Mat. <65409906+itsvyle@users.noreply.github.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^20.14.8",
-    "prettier": "^3.3.2",
-    "tsx": "^4.15.7"
-  },
-  "scripts": {
-    "start": "tsx index.ts"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5"
-  }
+    "name": "gh-previews",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/itsvyle/gh-previews",
+    "author": "Greg Mat. <65409906+itsvyle@users.noreply.github.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20.14.8",
+        "prettier": "^3.3.2",
+        "tsx": "^4.15.7"
+    },
+    "scripts": {
+        "start": "tsx index.ts",
+        "test": "npx ts-node test.ts",
+        "bundle": "esbuild index.ts --bundle --minify --outfile=bundle.js --platform=node"
+    },
+    "dependencies": {
+        "axios": "^1.7.2",
+        "discord.js": "^14.15.3",
+        "dotenv": "^16.4.5"
+    }
 }
