--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "tsx": "^4.15.7"
     },
     "scripts": {
-        "start": "tsx index.ts",
-        "test": "tsx tests.ts",
-        "bundle": "esbuild index.ts --bundle --minify --outfile=bundle.js --platform=node"
+        "start": "tsx ./src/index.ts",
+        "test": "tsx ./src/tests.ts",
+        "bundle": "cd src && esbuild index.ts --bundle --minify --outfile=../bundle.js --platform=node --target=node20"
     },
     "dependencies": {
         "axios": "^1.7.2",
